# Secure-Sphere

./: .gitignore
backend/: .gitignore  pyproject.toml
backend/app/: main.py
backend/app/api/: auth.py  dashboard.py  nsfw.py  scanner.py  threats.py
backend/app/core/: config.py  security.py
backend/app/db/: mongodb.py
backend/app/models/: scanner.py  user.py
backend/app/services/: user.py
backend/app/utils/: logger.py
extension/: background.js  manifest.json
frontend/: package-lock.json
frontend/src/: App.jsx  main.jsx
frontend/src/components/UI/: NavItem.jsx  SeverityBadge.jsx  StatCard.jsx  StatusDot.jsx
frontend/src/pages/Alerts/: AlertsPage.jsx
frontend/src/pages/Auth/: LoginPage.jsx
frontend/src/pages/Dashboard/: Dashboard.jsx
frontend/src/pages/NSFW/: NSFWPage.jsx
frontend/src/pages/Scanner/: ScannerPage.jsx
frontend/src/pages/Threats/: ThreatsPage.jsx
frontend/src/services/: api.js
frontend/src/styles/: global.css  theme.js
